.provarCaches/00D6C0000000xA6UAI/objects/sked__Templated_Shift__c.object
<CustomObject>
    <fields>
        <fullName>sked__Display_Name__c</fullName>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Is_Draft__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Templated Shifts</relationshipLabel>
        <relationshipName>Templated_Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Templated Shifts</relationshipLabel>
        <relationshipName>Templated_Shifts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Schedule_Template__c</fullName>
        <label>Schedule Template</label>
        <referenceTo>sked__Schedule_Template__c</referenceTo>
        <relationshipLabel>Templated Shifts</relationshipLabel>
        <relationshipName>Templated_Shifts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Start_Offset_Days__c</fullName>
        <label>Start Offset Days</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Start_Time_Of_Day__c</fullName>
        <label>Start Time Of Day</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <label>Templated Shift</label>
    <nameField>
        <displayFormat>TSH-{0000}</displayFormat>
        <label>Templated Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__DurationMustBeGreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Duration__c  &lt; 1</errorConditionFormula>
        <errorDisplayField>sked__Duration__c</errorDisplayField>
        <errorMessage>Templated Shift duration must be greater than 0 minute</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__StartOffsetDaysNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Start_Offset_Days__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>sked__Start_Offset_Days__c</errorDisplayField>
        <errorMessage>Start Offset Days Must be non-negative</errorMessage>
    </validationRules>
</CustomObject>